# v2x_ball_bot

./: README.md
rplidar_ros.bak/launch/: rplidar.launch.py
rplidar_ros/launch/: rplidar_a1_launch.py
v2x_ball_bot_bringup/: CMakeLists.txt  package.xml
v2x_ball_bot_bringup/config/: ball_detector.yaml  ball_perception.rviz  mapper_params_online_async.yaml  motion_controller.yaml  nav2_params.yaml
v2x_ball_bot_bringup/launch/: ball_perception.launch.py  ball_tracking.launch.py  bringup_min.launch.py  bringup_nav.launch.py  bringup_nav2.launch.py  display.launch.py  display_ros2.launch.py  gazebo_ros2.launch.py  gz_sim.launch.py  map_server_launch.py  nav_launch.py  orbbec_camera.launch.py  sim_gazebo_classic.launch.py  slam_launch.py  spawn_one.launch.py  v2x_ball_bot_launch.py
v2x_ball_bot_bringup/maps/: map.yaml
v2x_ball_bot_bringup/worlds/: empty_gz.world.sdf  gz.world.sdf  gz_resource_path.dsv.in
v2x_ball_bot_control/: CMakeLists.txt  package.xml  setup.py
v2x_ball_bot_control/config/: court_manager.yaml  scan_manager.yaml  twist_mux.yaml
v2x_ball_bot_control/launch/: approach_bringup.launch.py  approach_core.launch.py  scan_manager_test.launch.py  servo_mux_with_driver.launch.py  twist_mux.launch.py
v2x_ball_bot_control/v2x_ball_bot_control/: ball_detector_node.py  ball_perception_node.py  court_manager.py  motor_driver_node.py  odom_tf_pub.py  scan_manager.py  trajectory_predictor_node.py  visual_servoing_node.py
v2x_ball_bot_control/v2x_ball_bot_control/ball_perception/: __init__.py  depth_mapper.py  detector.py  marker_utils.py  tracker.py
v2x_ball_bot_description/: CMakeLists.txt  package.xml
v2x_ball_bot_description/gz/: yahboomcar_x3_gz.sdf
v2x_ball_bot_description/urdf/: v2x_ball_bot.xacro  yahboomcar_X3.urdf.xacro
v2x_ball_bot_msgs/: CMakeLists.txt  package.xml
v2x_ball_bot_msgs/msg/: Ball.msg  BallArray.msg
