<?xml version="1.0"?>
<package format="3">
  <name>v2x_ball_bot_bringup</name>
  <version>0.0.0</version>
  <description>Launch and config files for ball bot</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  # 추가한 것
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>xacro</exec_depend>
  # 여까지~

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
