<?xml version="1.0"?>
<package format="3">
  <name>v2x_ball_bot_control</name>
  <version>0.1.0</version>
  <description>V2X Ball Bot의 제어 및 노드 패키지</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>v2x_ball_bot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
