<package format="3">
  <name>v2x_ball_bot_control</name>
  <version>0.0.0</version>
  <description>V2X Ball Bot Control Nodes</description>

  <maintainer email="your@email.com">ss802</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>v2x_ball_bot_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
